tests/09-non-default-field.stderr
error[E0277]: the trait bound `NonDefault: Default` is not satisfied
 --> tests/09-non-default-field.rs:8:5
  |
8 |     non_default: NonDefault,
  |     ^^^^^^^^^^^ the trait `Default` is not implemented for `NonDefault`
  |
help: consider annotating `NonDefault` with `#[derive(Default)]`
  |
3 + #[derive(Default)]
4 | struct NonDefault;
  |
